--- a/sgn2017.tex
+++ b/sgn2017.tex
@@ -95,6 +95,79 @@
 \end{frame}
 
 
+\begin{frame}[c]{\href{https://www.biostat.wisc.edu/~kbroman/presentations/BDS2017-07/lod_and_effect}{\color{title} Genome scan}}
+
+\figh{Figs/lod_and_effect.png}{0.85}
+
+\note{
+  Here is a plot of the scan across the genome.
+
+  Think of the test statistic, ``LOD score'', as sort of like the
+  --log$_{10}$ p-value, though really it's a log$_{10}$ likelihood
+  ratio.
+
+  This links to an interactive plot, where you can explore the
+  genotype-phenotype associations across the genome.
+}
+\end{frame}
+
+
+
+
+\begin{frame}[c]{Permutation test}
+
+\figw{Figs/permtest_illustration.pdf}{0.9}
+
+\note{
+  A key issue in this business is the need to adjust for the multiple
+  statistical tests performed: that we did a ``scan'' across the
+  genome, testing for the genotype/phenotype association at each
+  marker.
+
+  To deal with this, we derive the distribution of the genome-wide
+  maximum test statistic under the ``global'' null hypothesis that the
+  phenotype is totally unrelated to the genotypes.
+
+  To determine that null distribution, we shuffle the phenotype
+  relative to the genotypes, calculate the test statistics across the
+  genome, derive the maximum test statistic, and repeat many times.
+}
+\end{frame}
+
+
+
+
+
+
+\begin{frame}[c]{\href{https://www.biostat.wisc.edu/~kbroman/presentations/BDS2017-07/perm_test}{\color{title} Permutation test}}
+
+\figw{Figs/perm_test.png}{0.9}
+
+\note{
+  This is an interactive illustration of a permutation test.
+
+  Click the ``Randomize'' button to shuffle the phenotypes and re-draw
+  the LOD curves; click the ``back'' button to go back.
+}
+\end{frame}
+
+
+
+
+\begin{frame}[c]{Histogram of permutation results}
+
+\figw{Figs/permtest_hist.pdf}{0.9}
+
+\note{
+  Here's a histogram of the results of a permutation test with 10,000 replicates.
+
+  A 5\% significance threshold can be taken to be the 95th percentile
+  of the results, which is about 3.9 in this case.
+}
+\end{frame}
+
+
+
 \begin{frame}[c]{Genome-scale phenotypes}
 
 \figh{Figs/mouse_on_chips.png}{0.75}
