Add to many phenotypes intro + diagnostics

--- a/sgn2017.tex
+++ b/sgn2017.tex
@@ -176,6 +176,17 @@
 
 
 
+\begin{frame}[c]{}
+\centerline{\Large Why?}
+\end{frame}
+
+
+\begin{frame}[c]{}
+\centerline{\Large More is not necessarily better}
+\end{frame}
+
+
+
 \begin{frame}{Challenges: {\color{foreground} diagnostics}}
 
 \vspace{2mm}
@@ -185,6 +196,36 @@
 \vspace{3mm}
 
 \hfill \href{https://kbroman.wordpress.com/2012/04/25/microarrays-suck}{\scriptsize \lolit \tt kbroman.wordpress.com/2012/04/25/microarrays-suck}
+
+\end{frame}
+
+
+\begin{frame}{Challenges: {\color{foreground} diagnostics}}
+
+  \vspace{2mm}
+
+\figw{Figs/many_boxplots.png}{0.85}
+
+\vspace{3mm}
+
+\hfill
+\href{https://www.biostat.wisc.edu/~kbroman/D3/manyboxplots/}{\scriptsize
+  \lolit \tt www.biostat.wisc.edu/{\textasciitilde}kbroman/D3/manyboxplots}
+
+\end{frame}
+
+
+
+\begin{frame}[c]{Challenges: {\color{foreground} diagnostics}}
+
+\vspace{-20mm}
+
+  \bbi
+\item What might have gone wrong?
+\item How might it be revealed?
+\item Make lots of graphs
+\item Follow up artifacts
+  \ei
 
 \end{frame}
 
