slide about multi-qtl models

--- a/sgn2017.tex
+++ b/sgn2017.tex
@@ -167,6 +167,18 @@
 \end{frame}
 
 
+\begin{frame}[c]{Modeling multiple QTL}
+
+\vspace{-20mm}
+
+  \bbi
+\item Reduce residual variation $\longrightarrow$ increased power
+\item Separate linked QTL
+\item Identify interactions among QTL {\lolit (epistasis)}
+  \ei
+\end{frame}
+
+
 
 \begin{frame}[c]{Genome-scale phenotypes}
 
