Add epistasis fig

--- a/sgn2017.tex
+++ b/sgn2017.tex
@@ -180,6 +180,15 @@
 
 
 
+
+
+\begin{frame}[c]{Epistasis in F$_\text{2}$}
+
+\figw{Figs/epistasis_f2.pdf}{1.0}
+
+\end{frame}
+
+
 \begin{frame}[c]{Genome-scale phenotypes}
 
 \figh{Figs/mouse_on_chips.png}{0.75}
