--- a/sgn2017.tex
+++ b/sgn2017.tex
@@ -189,6 +189,18 @@
 \end{frame}
 
 
+
+
+\begin{frame}[c]{Congenic line}
+
+\figw{Figs/congenic.pdf}{1.0}
+
+\end{frame}
+
+
+
+
+
 \begin{frame}[c]{Genome-scale phenotypes}
 
 \figh{Figs/mouse_on_chips.png}{0.75}
