Add 'improving precision' slide

--- a/sgn2017.tex
+++ b/sgn2017.tex
@@ -199,6 +199,24 @@
 
 
 
+\begin{frame}[c]{Improving precision}
+
+  \vspace{-20mm}
+
+  \bbi
+\item more recombinations
+\item more individuals
+\item more precise phenotype
+\item lower-level phenotypes
+\bi
+\item transcripts, proteins, metabolites
+  \ei
+  \ei
+
+\end{frame}
+
+
+
 
 
 \begin{frame}[c]{Genome-scale phenotypes}
