--- a/sgn2017.tex
+++ b/sgn2017.tex
@@ -95,9 +95,9 @@
 \end{frame}
 
 
-\begin{frame}[c]{\href{https://www.biostat.wisc.edu/~kbroman/presentations/BDS2017-07/lod_and_effect}{\color{title} Genome scan}}
+\begin{frame}[c]{\href{https://www.biostat.wisc.edu/~kbroman/presentations/SGN2017/lod_and_effect}{\color{title} Genome scan}}
 
-\figh{Figs/lod_and_effect.png}{0.85}
+\figh{Figs/lod_interactive.png}{0.85}
 
 \note{
   Here is a plot of the scan across the genome.
@@ -139,7 +139,7 @@
 
 
 
-\begin{frame}[c]{\href{https://www.biostat.wisc.edu/~kbroman/presentations/BDS2017-07/perm_test}{\color{title} Permutation test}}
+\begin{frame}[c]{\href{https://www.biostat.wisc.edu/~kbroman/presentations/SGN2017/perm_test}{\color{title} Permutation test}}
 
 \figw{Figs/perm_test.png}{0.9}
 
