Add AIL and HS figures

--- a/sgn2017.tex
+++ b/sgn2017.tex
@@ -217,6 +217,18 @@
 
 
 
+\begin{frame}[c]{Advanced intercross lines}
+
+  \figh{Figs/ail.pdf}{0.9}
+
+\end{frame}
+
+
+\begin{frame}[c]{Heterogeneous stock}
+
+  \figh{Figs/hs.pdf}{0.9}
+
+\end{frame}
 
 
 \begin{frame}[c]{Genome-scale phenotypes}
