Add CC and RIL figs; revise colors in congenic fig

--- a/sgn2017.tex
+++ b/sgn2017.tex
@@ -224,7 +224,26 @@
 \end{frame}
 
 
+\begin{frame}[c]{Recombinant inbred lines}
+
+  \figh{Figs/rilines.pdf}{0.9}
+
+\end{frame}
+
+
+\begin{frame}[c]{Collaborative Cross}
+
+  \figh{Figs/ri8.pdf}{0.9}
+
+\end{frame}
+
+
+
+
+
 \begin{frame}[c]{Heterogeneous stock}
+
+  \vspace{2mm}
 
   \figh{Figs/hs.pdf}{0.9}
 
