change url for 'microarrays suck' blog post

--- a/sgn2017.tex
+++ b/sgn2017.tex
@@ -267,7 +267,7 @@
 
 \vspace{3mm}
 
-\hfill \href{https://kbroman.wordpress.com/2012/04/25/microarrays-suck}{\scriptsize \lolit \tt kbroman.wordpress.com/2012/04/25/microarrays-suck}
+\hfill \href{http://kbroman.org/blog/2012/04/25/microarrays-suck}{\scriptsize \lolit \tt kbroman.org/blog/2012/04/25/microarrays-suck}
 
 \end{frame}
 
