--- a/sgn2017.tex
+++ b/sgn2017.tex
@@ -347,6 +347,16 @@
 \end{frame}
 
 
+\begin{frame}[c]{Pleiotropy?}
+\only{\figw{Figs/pleiotropy_network.pdf}{1.0}}
+\end{frame}
+
+\begin{frame}[c]{Causal?}
+\only{\figw{Figs/causal_network.pdf}{1.0}}
+\end{frame}
+
+
+
 \begin{frame}[c]{Multivariate phenotypes}
 \only<1>{\figw{Figs/multivariate.png}{1.0}}
 \only<2>{\figw{Figs/multivariate2.png}{1.0}}
