--- a/sgn2017.tex
+++ b/sgn2017.tex
@@ -251,11 +251,13 @@
 
 
 \begin{frame}[c]{Genome-scale phenotypes}
-
 \figh{Figs/mouse_on_chips.png}{0.75}
-
 \end{frame}
 
+
+\begin{frame}[c]{eQTL}
+\figh{Figs/plot-eqtl-islet.png}{0.75}
+\end{frame}
 
 
 
