cite baggerly & coombes

--- a/sgn2017.tex
+++ b/sgn2017.tex
@@ -387,7 +387,17 @@
 
 
 \begin{frame}[c]{}
+
+  \vspace{35mm}
+
   \centerline{\Large Are your results reproducible?}
+
+  \vspace{35mm}
+  \hfill
+  \href{https://projecteuclid.org/euclid.aoas/1267453942}
+       {\scriptsize \lolit cf Baggerly \& Coombes (2009) \\
+         \hfill \tt projecteuclid.org/euclid.aoas/1267453942}
+
 \end{frame}
 
 
