--- a/sgn2017.tex
+++ b/sgn2017.tex
@@ -251,7 +251,12 @@
 
 
 \begin{frame}[c]{Genome-scale phenotypes}
+\vspace*{5mm}
+
 \figh{Figs/mouse_on_chips.png}{0.75}
+\hfill
+\href{https://biochem.wisc.edu/faculty/attie}{\scriptsize \lolit Alan
+  Attie} \hspace{8mm}
 \end{frame}
 
 
